--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@react-google-maps/api": "2.19.2",
+    "firebase": "^11.0.2",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "4.11.0"
+    "react-icons": "4.11.0",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/google.maps": "3.54.1",
@@ -22,6 +24,8 @@
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.8",
     "autoprefixer": "10.4.16",
+    "eslint": "^9.15.0",
+    "eslint-config-next": "^15.0.3",
     "postcss": "8.4.31",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
