--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "1.7.17",
     "@react-google-maps/api": "2.19.2",
+    "date-fns": "^4.1.0",
     "firebase": "^11.0.2",
     "next": "13.4.19",
     "react": "18.2.0",
